--- a/css/index_bootstrap.css
+++ b/css/index_bootstrap.css
@@ -37,10 +37,10 @@ body {
 
 /*Bootstrap Modifications and new classes*/
 .mt-1 {
-  margin-top: 13px !important; }
+  margin-top: 15px !important; }
 
 .mb-1 {
-  margin-bottom: 13px !important; }
+  margin-bottom: 15px !important; }
 
 .mb-4 {
   margin-bottom: 40px !important; }
@@ -91,6 +91,20 @@ p {
   margin: 0px;
   padding: 0px; }
 
+/*Contact Form*/
+form label {
+  font-size: 3vw !important;
+  font-family: "Post No Bills Colombo Bold"; }
+
+form select {
+  font-size: 3vw !important; }
+
+form input {
+  font-size: 3vw !important; }
+
+form textarea {
+  font-size: 3vw !important; }
+
 @media only screen and (min-width: 768px) {
   .navbar {
     font-size: 30px; }
@@ -107,7 +121,16 @@ p {
     font-size: 18px; }
   /*Footer*/
   .footer__p {
-    font-size: 20px; } }
+    font-size: 20px; }
+  /*Contact Form*/
+  form label {
+    font-size: 20px !important; }
+  form select {
+    font-size: 20px !important; }
+  form input {
+    font-size: 20px !important; }
+  form textarea {
+    font-size: 20px !important; } }
 
 @media only screen and (min-width: 1200px) {
   .navbar {
@@ -119,7 +142,15 @@ p {
   .headerFooter__contactLogos {
     width: 50px; }
   .footer__p {
-    font-size: 20px; } }
-
-p {
-  font-size: 20px; }
+    font-size: 23px; }
+  p {
+    font-size: 23px; }
+  /*Contact Form*/
+  form label {
+    font-size: 23px !important; }
+  form select {
+    font-size: 23px !important; }
+  form input {
+    font-size: 23px !important; }
+  form textarea {
+    font-size: 23px !important; } }
