--- a/scss/Final_Project_index.scss
+++ b/scss/Final_Project_index.scss
@@ -40,10 +40,10 @@ body {
 /*Bootstrap Modifications and new classes*/
 
 .mt-1{
-    margin-top:13px !important;
+    margin-top:15px !important;
 }
 .mb-1{
-    margin-bottom: 13px !important;
+    margin-bottom: 15px !important;
 }
 .mb-4{
     margin-bottom: 40px !important; 
@@ -95,6 +95,22 @@ p{
     margin: 0px;
     padding: 0px;
 }
+/*Contact Form*/
+form{
+    label{
+        font-size: 3vw !important;
+        font-family: "Post No Bills Colombo Bold";
+    }
+    select{
+        font-size: 3vw !important;
+    }
+    input{
+        font-size: 3vw !important;
+    }
+    textarea{
+        font-size: 3vw !important;
+    }
+}
 @media only screen and (min-width:768px){
     .navbar{
         font-size: 30px;
@@ -118,23 +134,54 @@ p{
 .footer__p{
     font-size: 20px;
     }
+    /*Contact Form*/
+    form{
+        label{
+            font-size: 20px !important;
+        }
+        select{
+            font-size: 20px !important;
+        }
+        input{
+            font-size: 20px !important;
+        }
+        textarea{
+            font-size: 20px !important;
+        }
+    }
 }
 @media only screen and (min-width:1200px){
     .navbar{
         font-size: 35px;
     }
-/*Logo*/
+    /*Logo*/
     .headerFooter__logo{
         width: 170px;
     }
-/*Contact Logos*/
+    /*Contact Logos*/
     .headerFooter__contactLogos{
         width:50px;
     }
-.footer__p{
-    font-size: 20px;
+    .footer__p{
+    font-size: 23px;
+    }
+    p{
+        font-size: 23px;
+    }
+    /*Contact Form*/
+    form{
+        label{
+            font-size: 23px !important;
+        }
+        select{
+            font-size: 23px !important;
+        }
+        input{
+            font-size: 23px !important;
+        }
+        textarea{
+            font-size: 23px !important;
+        }
     }
 }
-p{
-    font-size: 20px;
-}
+
